<resources>
    <string name="zxing_app_name">Barcode Scanner</string>
    <string name="zxing_button_ok">OK</string>
    <string name="zxing_msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="zxing_msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="app_install_txt">Install</string>
    <string name="app_open_txt">Open</string>
    <string name="auto_update_var_wifi">%s is automatically updating, please wait …</string>
    <string name="calendar_app_txt">Smartisan Calendar</string>
    <string name="calendar_des_txt">An elegant and efficient calendar experience</string>
    <string name="cancel_text">Cancel</string>
    <string name="check_update">Update Available</string>
    <string name="check_update_fail">Check Update Failed</string>
    <string name="clock_app_txt">Smartisan Clock</string>
    <string name="clock_des_txt">Probably the best clock app ever</string>
    <string name="download_dialog_cancel">Cancel</string>
    <string name="download_dialog_download">Download</string>
    <string name="download_dialog_message">You are downloading over your mobile data network, which could result in data charges. Do you want to continue?</string>
    <string name="download_dialog_title">Notice</string>
    <string name="download_no_net">Network connection has failed. Download will start automatically once you reconnect.</string>
    <string name="downloading_message">Start Download...</string>
    <string name="email_app_txt">Smartisan Mail</string>
    <string name="email_des_txt">A simple yet elegant mailing experience</string>
    <string name="feedback_add_err_pic">Unable to load this picture</string>
    <string name="feedback_add_pic_err_type">Invalid file type, please try again</string>
    <string name="feedback_add_pic_limit">Sorry, you can\'t attach over 5 images</string>
    <string name="feedback_description_limit">Your description has more than 1000 characters, please modify and try again</string>
    <string name="feedback_uploading_report">Sending...</string>
    <string name="force_update__var_mobile">A new version of %s(v%s) is available with a download of %s MB. Downloading this while you are on a mobile network connection could result in data charges, do you still want to download it now?</string>
    <string name="force_update__var_wifi">A new version of %s(v%s) is available with a download of %s MB. You will have to update to this version before you can continue to use this app.</string>
    <string name="launcher_app_txt">Smartisan Launcher</string>
    <string name="launcher_des_txt">Your app launcher has never looked this good</string>
    <string name="more_apps_title">More Smartisan Apps</string>
    <string name="mover_app_txt">Smiling Cloud Sync</string>
    <string name="mover_des_txt">A simple yet elegant syncing experience</string>
    <string name="network_error_message">Connection to network failed, please try again later.</string>
    <string name="no_network">No internet connection</string>
    <string name="no_updated_version">Your App is Up to Date</string>
    <string name="notes_app_txt">Smartisan Notes</string>
    <string name="notes_des_txt">Probably the best note-taking app ever</string>
    <string name="ota_upate_hint">A more stable version of %s is available. For a better experience, go to Settings &gt; System Update to update to the newest system version.</string>
    <string name="problem_description_button_next">Send</string>
    <string name="problem_description_dialog_cancel">Exit</string>
    <string name="problem_description_dialog_info">Discard your changes?</string>
    <string name="problem_description_dialog_ok">Cancel</string>
    <string name="problem_description_hint">Describe your problem (1000 maximum characters)</string>
    <string name="problem_description_image_introduction">Add Image</string>
    <string name="problem_description_select_same_file">File already exists</string>
    <string name="problem_network_toast">No internet connection, please check and try again</string>
    <string name="problem_user_info_email">Email (Optional)</string>
    <string name="reader_app_txt">Smartisan Reader</string>
    <string name="reader_des_txt">A clean, simple reader for the age of information overload</string>
    <string name="report_failed_notification">Fail to send, please check internet connection and try again</string>
    <string name="report_success_notification">Sent Successfully</string>
    <string name="system_downloader_err">Unable to download content. Download manager is off.</string>
    <string name="system_downloader_error">Can not download, please check whether the system is open</string>
    <string name="title_button_text_back">Back</string>
    <string name="update_cancel">Cancel</string>
    <string name="update_download">Download</string>
    <string name="update_install">Install</string>
    <string name="user_feedback">Feedback</string>
    <string name="back_to_settings">Back %s</string>
    <string name="archived_full_report">已发送</string>
    <string name="archived_partial_report">已发送</string>
    <string name="build_failed_report">生成报告失败</string>
    <string name="building_report">生成缺陷报告</string>
    <string name="complete_failed_report">完成失败</string>
    <string name="completing_report">正在发送...</string>
    <string name="compress_failed_report">压缩报告失败</string>
    <string name="compressing_paused_report">压缩停止</string>
    <string name="compressing_report">正在发送...</string>
    <string name="default_sim_name">SIM</string>
    <string name="emergency_call_dialog_number_for_display">Emergency number</string>
    <string name="missing_name">(No Name)\b</string>
    <string name="queued_for_upload">缓存到上传队列</string>
    <string name="qzone">Qzone</string>
    <string name="ready_to_archive_report">正在发送...</string>
    <string name="ready_to_complete_report">正在发送...</string>
    <string name="ready_to_compress_report">正在发送...</string>
    <string name="ready_to_transmit_report">正在发送...</string>
    <string name="ready_to_upload_report">正在发送...</string>
    <string name="share_text">Share</string>
    <string name="transmit_failed_report">上传报告失败</string>
    <string name="transmitting_report">正在发送...</string>
    <string name="type_auto">自动报告</string>
    <string name="type_user">手动报告</string>
    <string name="updating">Updating</string>
    <string name="user_deleted_draft_report">用户删除草稿报告</string>
    <string name="user_deleted_outbox_report">用户删除发送箱报告</string>
    <string name="waiting_user_input_report">等待用户输入</string>
    <string name="we_chat">WeChat</string>
    <string name="we_chat_timeline">Moments</string>
    <string name="weibo">Weibo</string>
    <string name="agree">Ok</string>
    <string name="app_name">HandShaker</string>
    <string name="back_main_settings">返回主界面</string>
    <string name="button_setting_txt">Settings</string>
    <string name="button_verify_txt">OK</string>
    <string name="check_apk_update_message">A new phone app version of HandShaker is available. For the sake of stability, it is recommended that you upgrade to the new version. Do you want to upgrade?</string>
    <string name="connect_info_usb_show_name">Computer</string>
    <string name="connect_info_usb_tip">Connected to computer by USB</string>
    <string name="connect_info_wifi_tip">Connected to %s</string>
    <string name="connectted_btn_disconnectted">Disconnect</string>
    <string name="connectting_usb_tip">You can also connect via USB</string>
    <string name="disconnect_dialog_cancel">Cancel</string>
    <string name="disconnect_dialog_message">Your phone is connected to your computer right now, do you want to disconnect?</string>
    <string name="disconnect_dialog_title">Disconnect</string>
    <string name="disconnect_dialog_yes">Yes</string>
    <string name="download_now">Download Now</string>
    <string name="error_proto">proto error!</string>
    <string name="faq">FAQ</string>
    <string name="follow_dialog_coyp_text">Copy</string>
    <string name="follow_dialog_coyp_toast_text">Text Copied</string>
    <string name="follow_dialog_weibo_title_text">Copy the Weibo account name</string>
    <string name="follow_dialog_weixin_title_text">Copy the Wechat account name</string>
    <string name="follow_website_title">Official Website</string>
    <string name="follow_weibo_title">Weibo</string>
    <string name="follow_weixin_title">Wechat Account</string>
    <string name="grant_permission_success">Permission acquired, you can now proceed in HandShaker</string>
    <string name="help">Help</string>
    <string name="host_version_low_summary">You are using an outdated version of HandShaker, please update and try again</string>
    <string name="host_version_low_title">Update Needed</string>
    <string name="is_connected">Connected to HandShaker</string>
    <string name="is_disconnect">Whether to disconnect</string>
    <string name="is_trust_host">Whether to trust the computer</string>
    <string name="language_system_txt">Use System Language</string>
    <string name="later">Later</string>
    <string name="net_prompt_message">HandShaker requires permission of network in order to provide full functionality. Do you wish to allow it now?</string>
    <string name="new_handshaker_name">HandShaker</string>
    <string name="no">NO</string>
    <string name="no_wifi_btn_connect_wifi">Connect to WLAN</string>
    <string name="no_wifi_tip">Phone not connected to WLAN yet, please connect to the same WLAN as your computer, and try again</string>
    <string name="not_agree">Cancel</string>
    <string name="notice">Notice</string>
    <string name="notification_connected_text">Tap for Details</string>
    <string name="notification_connected_usb">Successfully connected via USB</string>
    <string name="notification_connected_wifi">Successfully connected via WLAN</string>
    <string name="notification_trust_message">Select your trust type</string>
    <string name="notification_trust_title">Connecting</string>
    <string name="permission_description">Please authorize HandShaker to read your SD card, so that you can manage your files in external SD card with HandShaker.</string>
    <string name="permission_title">Notice</string>
    <string name="scan_autolink_progress_txt">Connecting...</string>
    <string name="scan_camera_occupy_txt">Unable to launch camera as it is occupied by another app</string>
    <string name="scan_camera_permission_txt">Please authorize HandShaker to use your camera</string>
    <string name="scan_link_error_dialog_content">Please check your network status and try again. You can also try connect via USB if encountering multiple failures</string>
    <string name="scan_link_error_dialog_title">Connection Failed</string>
    <string name="scan_qrcode_error_toast">Unusable QRCode, please try again</string>
    <string name="scan_qrcode_link_tip">You can try setting up connection manually if your desired device is not discovered</string>
    <string name="scan_qrcode_txt">Manual</string>
    <string name="scan_tips_txt">Please launch the desktop client of HandShaker\nClick the link down below to find the barcode and scan</string>
    <string name="setting_follow_title">Follow Us</string>
    <string name="setting_share_title_txt">Share</string>
    <string name="wifi_middle_tip">Please launch HandShaker from your computer in the same WLAN network to establish connection. Unable to create connection? </string>
    <string name="wifi_phone_name">Phone Name</string>
    <string name="wifi_ssid">Current WLAN</string>
    <string name="facebook">Facebook</string>
    <string name="follow_website_content">www.smartisan.com</string>
    <string name="follow_weibo_content">@锤子科技</string>
    <string name="follow_weixin_content">smartisan2012</string>
    <string name="twitter">Twitter</string>
</resources>