<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/share_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/share_title_bar"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/share_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/setting_share_title_txt"
            android:textColor="@color/setting_item_text_color"
            android:textSize="@dimen/more_text_size_15" />

        <TextView
            android:id="@+id/share_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/setting_share_cancel"
            android:gravity="center"
            android:minWidth="@dimen/button_min_width"
            android:text="@android:string/cancel"
            android:textColor="#313131"
            android:textSize="@dimen/more_text_size_135" />
    </RelativeLayout>

    <TableLayout
        android:id="@+id/layout_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/share_comp_top"
        android:layout_marginBottom="@dimen/share_comp_bottom">

        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/share_weibo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:drawableTop="@drawable/weibo"
                android:gravity="center"
                android:text="@string/weibo"
                android:textColor="@color/setting_item_text_color"
                android:textSize="@dimen/setting_share_comp_text_size" />

            <TextView
                android:id="@+id/share_weixin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:drawableTop="@drawable/wx"
                android:gravity="center"
                android:text="@string/we_chat"
                android:textColor="@color/setting_item_text_color"
                android:textSize="@dimen/setting_share_comp_text_size" />

            <TextView
                android:id="@+id/share_twitter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:drawableTop="@drawable/twitter"
                android:gravity="center"
                android:text="@string/twitter"
                android:textColor="@color/setting_item_text_color"
                android:textSize="@dimen/setting_share_comp_text_size" />
        </TableRow>

        <TableRow
            android:layout_marginTop="28dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/share_qzone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:drawableTop="@drawable/qzone"
                android:gravity="center"
                android:text="@string/qzone"
                android:textColor="@color/setting_item_text_color"
                android:textSize="@dimen/setting_share_comp_text_size" />

            <TextView
                android:id="@+id/share_weixin_timeline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:drawableTop="@drawable/pyq"
                android:gravity="center"
                android:text="@string/we_chat_timeline"
                android:textColor="@color/setting_item_text_color"
                android:textSize="@dimen/setting_share_comp_text_size" />

            <TextView
                android:id="@+id/share_facebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:drawableTop="@drawable/fb"
                android:gravity="center"
                android:text="@string/facebook"
                android:textColor="@color/setting_item_text_color"
                android:textSize="@dimen/setting_share_comp_text_size" />
        </TableRow>
    </TableLayout>
</LinearLayout>
