<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="#ffffff" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.smartisanos.smartfolder.aoa.view.TitleBar android:id="@+id/titlebar" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true"/>
    <Button android:textColor="@android:color/white" android:id="@+id/back_button" android:background="@drawable/selector_blue_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="9dp" android:text="@string/back_main_settings" android:layout_alignParentBottom="true"/>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="147dp" android:layout_below="@+id/titlebar">
        <ImageView android:layout_gravity="center_horizontal" android:background="@drawable/warning_icon" android:layout_width="89.3dp" android:layout_height="89.3dp"/>
        <TextView android:textSize="20dp" android:textColor="@color/normal_text" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="26dp" android:text="@string/host_version_low_title"/>
        <TextView android:textSize="13.5dp" android:textColor="@color/no_wifi_tip_text_color" android:gravity="center" android:layout_gravity="center_horizontal" android:paddingLeft="25dp" android:paddingRight="25dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/host_version_low_summary"/>
    </LinearLayout>
</RelativeLayout>
